==> Microchip-MPLAB-Harmony/reference_apps/apps/pic32mk_mcm_multi_motor/pic32mk_mcm_ multi_motor_foc/firmware/src/config/mclv2_pic32_mk_mcm_pim/X2CCode/X2CScope/src/X2CScopeCommunication.c <==
/*
 * Copyright (c) 2013, Linz Center of Mechatronics GmbH (LCM)
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without modification, are permitted
 * provided that the following conditions are met:
 *
 * 1. Redistributions of source code must retain the above copyright notice, this list of
 * conditions and the following disclaimer.
 *
 * 2. Redistributions in binary form must reproduce the above copyright notice, this list of
 * conditions and the following disclaimer in the documentation and/or other materials provided
 * with the distribution.
 *
 * 3. Neither the name of the [organization] nor the names of its contributors may be used to
 * endorse or promote products derived from this software without specific prior written
 * permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR
 * IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY
 * AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
 * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
 * OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 * POSSIBILITY OF SUCH DAMAGE.
 */
 
#include "../inc/X2CScopeCommunication.h"

void sendSerial(uint8_t data)
{
     bool status;
     status = UART1_Write(&data,1);
     
     if( false == status )
     {
         /** ToDO: Log error */
     }
}

uint8_t receiveSerial(void)
{
    uint8_t data;
    bool status = false;
    status = UART1_Read(&data, 1);
    if(status == true)
    {
      return data;  
    }
    else
    {
      return (uint8_t)(0);
    }
}

uint8_t isReceiveDataAvailable(void)
{
    bool status;
    
    status = UART1_ReceiverIsReady();
    return (uint8_t)status;
}

uint8_t isSendReady(void)
{
    bool status;
    
    status = UART1_TransmitterIsReady();
    return (uint8_t)status;
}
